Bug 1025815 - caretPositionFromPoint needs to account for CSS transforms. r=bz

MozReview-Commit-ID: 1cTUyd0x6xy

--HG--
extra : rebase_source : 2194519fa3417dc8a8fe63db5b773e56daa38b16